--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rum"
-version = "3.1.2"
+version = "3.1.0"
 authors = ["Ivan <delgado.ivan@protonmail.com>"]
 edition = "2018"
 
@@ -12,7 +12,7 @@ path = "src/main.rs"
 name = "rum_lib"
 
 [build-dependencies] # <-- We added this and everything after!
-lalrpop = "0.18.1"
+lalrpop = { version = "0.18.1", features = ["lexer"] }
 
 [dependencies]
 lalrpop-util = "0.18.1"
